--- a/client/callPlannerApp/www/modules/users/views/modal-signup.html
+++ b/client/callPlannerApp/www/modules/users/views/modal-signup.html
@@ -6,16 +6,16 @@
     </div>
   </ion-header-bar>
   <ion-content  padding="true" scroll="false" class="has-header">
-    <form ng-submit="doSignup()">
+    <form ng-submit="signup()">
       <div class="list">
         <label class="item item-input">
-          <input type="email" placeholder="user@domain.com" ng-model="loginData.email">
+          <input type="email" placeholder="user@domain.com" ng-model="registration.email">
         </label>
         <label class="item item-input">
-          <input type="password" placeholder="password" ng-model="loginData.password">
+          <input type="password" placeholder="password" ng-model="registration.password">
         </label>
         <label class="item item-input">
-          <input type="tel" placeholder="phone" ng-model="loginData.tel">
+          <input type="tel" placeholder="phone" ng-model="registration.tel">
         </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Sign up</button>
