--- a/client/callPlannerApp/www/modules/core/views/app.html
+++ b/client/callPlannerApp/www/modules/core/views/app.html
@@ -14,34 +14,22 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left" >
-    <ion-header-bar class="bar-dark">
-      <h1 class="title">Call Planner</h1>
+    <ion-header-bar class="dark-bg expanded">
+      <span class="avatar" style="background: url('img/crown.jpg'); background-size: cover;"></span>
+      <h2>Hello, <strong>Jinyoung</strong></h2>
     </ion-header-bar>
 
-    <ion-content>
+    <ion-content class="stable-bg has-expanded-header">
       <ion-list ng-repeat="item in menuoptions" ui-sref-active="active">
         <ion-item class="item-icon-left" ui-sref="{{item.sref}}" menu-close>
           <span class="icon {{item.icon}}"></span>  {{item.name}}
         </ion-item>
-        </ion-list>
-
-        <!--
-        <ion-item class="item-icon-left" menu-close ui-sref="router">
-          <div ng-click="logout()"><span class="icon ion-android-calendar"></span> Plan</div>
-        </ion-item>
-        -->
+      </ion-list>
 
       <ion-list>
-        <ion-item class="item-divider"></ion-item>
         <ion-item class="item-icon-left"  menu-close >
           <div ng-click="logout()"><span class="icon ion-android-exit"></span>  Log out</div>
         </ion-item>
-
-        <!--
-        <ion-item class="item-icon-left" menu-close ng-repeat="location in locations">
-          <span class="icon ion-ios-location"></span> {{ location.city}}
-        </ion-item>
-        -->
       </ion-list>
 
     </ion-content>
