--- a/client/callPlannerApp/www/modules/users/views/modal-signup.html
+++ b/client/callPlannerApp/www/modules/users/views/modal-signup.html
@@ -1,11 +1,11 @@
 <ion-modal-view ng-controller="SignupCtrl">
-  <ion-header-bar class="bar-stable">
-    <h1 class="title">Signup</h1>
+  <ion-header-bar class="bar-dark">
+    <h1 class="title">Sign up</h1>
     <div class="buttons">
-      <button class="button button-clear" ng-click="closeModal(2)">Close</button>
+      <button class="button button-clear ion-android-arrow-back button-left" ng-click="closeModal(2)"></button>
     </div>
   </ion-header-bar>
-  <ion-content  padding="true" scroll="false" class="has-header">
+  <ion-content  padding="true" scroll="false"  style="background-image: url(img/sb1.jpg); background-size: cover;">
     <form ng-submit="signup()">
       <div class="list">
         <label class="item item-input">
@@ -19,6 +19,10 @@
         </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Sign up</button>
+        </label>
+        <label class="item">
+          <button class="button icon-left ion-social-google button-assertive-900">Google+</button>
+          <button class="button icon-left ion-social-facebook button-positive-900">Facebook</button>
         </label>
       </div>
     </form>
