Add Schedule Page
- add create plan page
- add popup confirm

--- a/client/callPlannerApp/www/css/style.css
+++ b/client/callPlannerApp/www/css/style.css
@@ -79,3 +79,133 @@ p {
     position: fixed;
     bottom: 1;
 }
+
+
+/* Chips
+=================================*/
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500);
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #eee;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-smooth: antialiased;
+  margin: 0 auto;
+}
+
+h2 {
+  font-weight: 500;
+}
+
+.popup-body{
+  min-height: 150px;
+}
+
+.container {
+
+  width: 400px;
+  margin: 0 auto;
+}
+
+.md-chip {
+  display: inline-block;
+  border-radius: 30px;
+  padding: 0;
+  height: 30px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -webkit-transition: .2s ease-out;
+  transition: .2s ease-out;
+}
+
+.md-chip:hover {
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+.md-chip-img {
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  overflow: hidden;
+  float: left;
+}
+
+.md-chip-img .md-chip-span {
+  display: block;
+  height: 30px;
+}
+
+.md-chip-img img {
+  -webkit-transform: translate(-50%);
+  margin-left: 21px;
+  height: 30px;
+}
+
+.md-chip-text {
+  display: inline-block;
+  font-weight: 200;
+  font-size: 14px;
+  height: 30px;
+  float: left;
+  padding: 12px 15px;
+  color: rgba(255, 255, 255, .87);
+}
+
+.md-chip-pink {
+  background-color: #e91e63
+}
+
+.md-chip-pink .md-chip-span {
+  background-color: #16e19c;
+}
+
+.md-chip-orange {
+  background-color: #ff9800;
+}
+
+.md-chip-orange .md-chip-span {
+  background-color: #0067ff;
+}
+
+.md-chip-indigo {
+  background-color: #3f51b5;
+}
+
+.md-chip-indigo .md-chip-span {
+  background-color: #c0ae4a;
+}
+
+.md-chip-teal {
+  background-color: #009688;
+}
+
+.md-chip-span {
+  background-color: #ff6977;
+}
+
+.md-chip-white {
+  background-color: #fff;
+}
+
+.md-chip-white .md-chip-text {
+  color: rgba(0, 0, 0, .87);
+}
+
+.md-chip-red {
+  background-color: #f44336;
+}
+
+.md-chip-blue {
+  background-color: #2196f3
+}
+
+.md-chip-green {
+  background-color: #4caf50
+}
+
+/* For the sake of this demo */
+.md-chip {
+  margin: 0 20px 20px 20px;
+}
