--- a/client/callPlannerApp/www/modules/core/views/home.html
+++ b/client/callPlannerApp/www/modules/core/views/home.html
@@ -1,23 +1,19 @@
 <ion-view view-title="Call Planner">
   <ion-content style="background-image: url(img/sb1.jpg); background-size: cover;">
-    <div class="list card ">
-      <div class="item item-image"  ng-click="goContacts()">
+    <div class="list card">
+      <div class="item clear-bg item-bg-image "  ng-click="goContacts()">
         <img src="img/home_card1.jpg">
-      </div>
-      <div class="item item-icon-left ">
-        <i class="icon ion-ios-bolt"></i>
         <h2>RIGHT NOW!</h2>
         <p>conference right now</p>
       </div>
-
-      <div class="item item-image" ng-click="goCreatePlan()">
+    </div>
+    <div class="list card">
+      <div class="item clear-bg item-bg-image "  ng-click="goCreatePlan()">
         <img src="img/home_card2.jpg">
-      </div>
-      <div class="item item-icon-left ">
-        <i class="icon ion-ios-alarm-outline"></i>
         <h2>SCHEDULE PLAN</h2>
         <p>schedule your conference</p>
       </div>
     </div>
+
   </ion-content>
 </ion-view>
