--- a/client/callPlannerApp/www/modules/plan/views/contacts.html
+++ b/client/callPlannerApp/www/modules/plan/views/contacts.html
@@ -1,4 +1,14 @@
 <ion-view view-title="Contacts">
+  <ion-nav-buttons side="left">
+    <button class="button-clear" ng-click="$ionicGoBack()">
+      <span>Back</span>
+    </button>
+  </ion-nav-buttons>
+  <ion-nav-buttons side="right">
+    <button class="button-clear" ng-click="$ionicGoBack()">
+      <span>Add</span>
+    </button>
+  </ion-nav-buttons>
   <ion-content>
     <h1>Contacts</h1>
   </ion-content>
