--- a/client/callPlannerApp/www/modules/core/views/home.html
+++ b/client/callPlannerApp/www/modules/core/views/home.html
@@ -1,4 +1,9 @@
 <ion-view view-title="Call Planner">
+  <ion-nav-buttons side="left">
+    <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+      {{username}}
+    </button>
+  </ion-nav-buttons>
   <ion-content style="background-image: url(img/sb1.jpg); background-size: cover;">
     <div class="list card">
       <div class="item clear-bg item-bg-image "  ng-click="goContacts()">
