--- a/client/callPlannerApp/www/modules/core/views/app.html
+++ b/client/callPlannerApp/www/modules/core/views/app.html
@@ -1,16 +1,19 @@
 <ion-side-menus enable-menu-with-back-views="false">
 
   <ion-side-menu-content>
+    <!--
     <ion-nav-bar class="bar-dark">
-      <ion-nav-back-button></ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
           {{username}}
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
+    -->
 
+    <ion-nav-bar class="bar-dark" align-title="center"></ion-nav-bar>
     <ion-nav-view ></ion-nav-view>
+
   </ion-side-menu-content>
 
   <ion-side-menu side="left" >
